# better-md

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: EmptyState.tsx  MarkdownView.tsx  TabBar.tsx  TableOfContents.tsx  ThemePicker.tsx  Toolbar.tsx
src/hooks/: useFileOpen.ts  useFileWatcher.ts  useMarkdown.ts  useTheme.ts
src/lib/: markdown.ts  toc.ts
src/styles/: global.css  markdown.css  tabs.css  toc.css  toolbar.css
src/styles/highlight/: dark.css  light.css  nord.css
src/styles/themes/: dark.css  light.css  nord.css
src/types/: index.ts  modules.d.ts
