[package]
name = "better-md"
version = "0.1.1"
description = "A native macOS Markdown reader"
authors = ["Kush Daga"]
edition = "2021"

[lib]
name = "better_md_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
